# wavs-art

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.cpu.yml  docker-compose.yml  foundry.toml  metadata.json  package-lock.json  package.json  remappings.txt  wavs.toml
.docker/: ollama.entrypoint.sh
.docker/AUTOMATIC1111/: Dockerfile  entrypoint.sh
components/autonomous-artist/: Cargo.toml  Makefile  README.md
components/autonomous-artist-simple-relay/: Cargo.toml  Makefile  README.md
components/autonomous-artist-simple-relay/src/: bindings.rs  lib.rs
components/autonomous-artist/src/: evm.rs  image.rs  ipfs.rs  lib.rs
components/rewards/: Cargo.toml
components/rewards/src/: bindings.rs  lib.rs  trigger.rs
components/rewards/src/sources/: erc721.rs
frontend/: .env.holesky  README.md  index.html  load-env.js  package-lock.json  package.json  vite.config.mts
frontend/src/: App.tsx  constants.ts  main.tsx
frontend/src/abis/: ERC20.json  RewardDistributor.json  UniversalRewardsDistributor.json
frontend/src/components/: DebugInfo.tsx  Header.tsx  HomePage.tsx  MintForm.tsx  NFTDetailPage.tsx  NFTExplorer.tsx  NFTGallery.tsx  RewardsPage.tsx
frontend/src/contexts/: MintContext.tsx  NFTExplorerContext.tsx
frontend/src/hooks/: useRewards.ts
frontend/src/types/: index.ts
frontend/src/utils/: clients.ts  config.ts  faucet.ts  ipfs.ts  wagmi-utils.ts  web3.ts
script/: Claim.s.sol  ClaimRewards.s.sol  Deploy.s.sol  Mint.s.sol  MintNft.s.sol  ShowNft.s.sol  Trigger.s.sol  UpdateNft.s.sol  build_service.sh  deploy.sh  start.sh  start_all.sh
script/template/: .env.example.operator
src/common/: CmdRunner.sol
src/contracts/: RewardDistributor.sol  RewardERC20.sol  RewardSourceERC721.sol  RewardToken.sol  WavsMinter.sol  WavsNft.sol
src/interfaces/: ITypes.sol  IWavsNftServiceTypes.sol  IWavsTrigger.sol
test/unit/: WavsTrigger.t.sol
testnet/: start.sh
